--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -17,7 +17,7 @@ a {
   flex-direction: row;
   color: white;
   padding: 0px 20px;
-  background-color: transparent;
+  background-color: #0c111f;
   position: fixed;
   width: 100vw;
   z-index: 2;
