--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -25,20 +25,25 @@ a {
   /*box-shadow: rgba(50, 50, 93, 0.23) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px;*/
 }
 
+@media screen and (max-width: 576px) {
+  .navbar {
+    height: 3vh;
+  }
+}
+
 .nav-links {
   display: flex;
   margin-left: auto;
   align-items: center;
+  flex-direction: row;
 }
 
 .nav-links li {
   color: white;
-
   padding: 10px 30px;
   cursor: pointer;
   /*  text-transform: capitalize; */
   font-size: 16px;
-
   padding: 10px 20px;
   cursor: pointer;
   text-transform: capitalize;
@@ -49,10 +54,7 @@ a {
 .nav-links li:hover {
   color: #6b7eb1;
 }
-.hero {
-  text-align: center;
-  margin-top: 15%;
-}
+
 .hero h1 {
   text-align: center;
   font-size: 80px;
@@ -67,35 +69,18 @@ button {
   font-size: 16px;
   background: none;
 }
-@media (max-width: 768px) {
-  .logo {
-    display: flex;
-    position: absolute;
-    top: 15px;
-    left: 35px;
-  }
+@media (max-width: 576px) {
   .nav-links {
     display: none;
   }
-  .nav-links-mobile {
-    position: absolute;
-    display: block;
 
-    list-style: none;
-    box-shadow: rgba(50, 50, 93, 0.23) 0px 50px 100px -20px,
-      rgba(0, 0, 0, 0.3) 0px 30px 60px -30px;
-    left: 0;
-    top: 10%;
-    transition: all 0.5s ease-in-out;
-    width: 100%;
-    background-color: #0c111f;
-  }
   ul li {
-    padding: 20px;
     width: 100%;
     transition: all 0.5s ease-in-out;
-    text-align: center;
-    color: white;
+    color: #ffffff;
+    font-size: 15px;
+    padding: 10px 0px 0px 15px;
+    margin: 0px;
   }
   ul li:hover {
     color: #6b7eb1;
@@ -128,4 +113,71 @@ button {
   font-size: 15px;
   cursor: pointer;
   outline: none;
+}
+@media screen and (max-width: 576px) {
+  .contact-button {
+    font-size: 12px;
+    padding: 5px 8px;
+  }
+}
+
+.list {
+  margin-left: auto;
+}
+@media screen and (max-width: 576px) {
+  .nav-links {
+    display: none;
+  }
+}
+
+.menu-icon {
+  margin-left: auto;
+}
+
+@media screen and (min-width: 768px) {
+  .menu-icon {
+    display: none;
+  }
+}
+
+.mobile-list {
+  display: flex;
+  flex-direction: column;
+  list-style-type: none;
+  position: absolute;
+  right: 0;
+  top: 3vh;
+  background-color: #263238;
+  margin: 0px;
+  padding: 0px;
+  text-align: left;
+  width: 43%;
+}
+
+@media screen and (min-width: 768px) {
+  .mobile-list {
+    display: none;
+  }
+}
+
+.item {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.downcon {
+  background-color: #000000;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 5px;
+  height: 25px;
+  padding: 5px 10px;
+  width: auto;
+}
+
+.hrl {
+  width: 100%;
+  border: 0.1px solid rgb(255, 255, 255, 0.5);
 }
