--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -143,7 +143,7 @@ button {
 .mobile-list {
   display: flex;
   flex-direction: column;
-  position: fixed;
+  position: absolute;
   right: 0;
   top: 6vh;
   background-color: #263238;
@@ -152,7 +152,6 @@ button {
   margin: 0px;
   padding: 0px;
   width: 43%;
-  margin-right: 20px;
 }
 
 @media screen and (min-width: 768px) {
