--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -79,7 +79,7 @@ button {
     transition: all 0.5s ease-in-out;
     color: #ffffff;
     font-size: 15px;
-    padding: 10px 0px 0px 15px;
+    padding: 10px 0px 7px 15px;
     margin: 0px;
   }
   ul li:hover {
@@ -171,7 +171,7 @@ button {
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-top: 5px;
+  margin-top: 10px;
   height: 25px;
   padding: 5px 10px;
   width: auto;
@@ -179,7 +179,7 @@ button {
 
 .hrl {
   width: 100%;
-  border: 0.1px solid rgb(255, 255, 255, 0.5);
+  border: 1px solid rgb(255, 255, 255, 0.5);
 }
 
 .sub-menu {
@@ -201,4 +201,29 @@ button {
 
 .submenu-item {
   display: block;
+}
+
+.inputholder {
+  background-color: #010309;
+  display: flex;
+  flex-direction: row;
+}
+
+.input {
+  background: transparent;
+  width: 86%;
+  outline: none;
+  border: none;
+  font-size: 15px;
+  padding: 5px 0px 5px 15px;
+  ::placeholder {
+    color: rgb(255, 255, 255, 0.5);
+  }
+}
+
+.button {
+  background-color: transparent;
+  color: #ffffff;
+  border-left: 1px solid rgb(255, 255, 255, 0.25);
+  font-weight: normal;
 }
