--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -227,3 +227,12 @@ button {
   border-left: 1px solid rgb(255, 255, 255, 0.25);
   font-weight: normal;
 }
+
+.mobile {
+  margin-left: auto;
+}
+@media screen and (min-width: 577px) {
+  .mobile {
+    display: none;
+  }
+}
